@startuml
title Aplicativo de Serviço de Atendimento ao Cliente (SAC)

class Cliente {
  - nome : String
  - email : String
  - telefone : String
  - endereco : String
  + abrirChamado() : void
  + realizarAvaliacao() : void
  + visualizarChamados() : void
  + atualizarDados() : void
}


class Atendimento {
  - dataInicio : DateTime
  - dataFim : DateTime
  - observacoes : String
  '- chamado : Chamado  '
  '- atendente : Atendente'
  + iniciarAtendimento() : void
  + finalizarAtendimento() : void
  + registrarObservacao() : void
  + calcularDuracao() : void
}



class Avaliacao {
  - nota : int
  - comentario : String
  - dataAvaliacao : Date
  - cliente : Cliente
  - atendimento : Atendimento
  + registrarAvaliacao() : void
  + exibirAvaliacao() : void
  + editarAvaliacao() : void
  + excluirAvaliacao() : void
}

' ---- RELACIONAMENTOS ----
Cliente "1..N" *--> "1..1" Avaliacao 
Avaliacao "1..1" <--* "1..1" Atendimento 

@enduml
